<?xml version="1.0"?>
<package>
  <name>hansbot_rviz_launchers</name>
  <version>2.3.1</version>
  <description>Launchers for visualizing hansbot</description>
  <author email="admin@xielonghua.cn">LongHua Xie</author>
  <maintainer email="admin@xielonghua.cn">LongHua Xie</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
</package>
